--- a/11-directivas-senhales/src/app/productos/pages/producto/producto.component.html
+++ b/11-directivas-senhales/src/app/productos/pages/producto/producto.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="col-auto">
-      <span>Algo de información</span>
+      <span etiquetaPersonalizada></span>
     </div>
   </div>
 
