Clase 321. Cambiar el mensaje de la etiqueta

--- a/11-directivas-senhales/src/app/productos/pages/producto/producto.component.html
+++ b/11-directivas-senhales/src/app/productos/pages/producto/producto.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="col-auto">
-      <span etiquetaPersonalizada [color]="color">Temporal</span>
+      <span etiquetaPersonalizada [color]="color" [errores]="formulario.get('nombre')?.errors">Temporal</span>
     </div>
   </div>
 
