Clase 328. Nuestra primera señal - Signal

--- a/11-directivas-senhales/src/app/senhales/components/menu-lateral/menu-lateral.component.html
+++ b/11-directivas-senhales/src/app/senhales/components/menu-lateral/menu-lateral.component.html
@@ -1,5 +1,5 @@
 <ul class="list-group">
-  <li *ngFor="let elemento of elementosMenu" class="list-group-item" [routerLink]="[elemento.ruta]" routerLinkActive="active" >
+  <li *ngFor="let elemento of elementosMenu()" class="list-group-item" [routerLink]="[elemento.ruta]" routerLinkActive="active" >
     {{ elemento.titulo }}
   </li>
 </ul>
