--- a/11-directivas-senhales/src/app/senhales/pages/propiedades/propiedades.component.html
+++ b/11-directivas-senhales/src/app/senhales/pages/propiedades/propiedades.component.html
@@ -12,5 +12,7 @@
     <pre>{{ usuario() | json }}</pre>
 
     {{ nombreCompleto() }}
+
+    <button (click)="incrementar(1)" class="btn btn-primary">+1</button>
   </div>
 </div>
