Clase 371. Reaccionar al cambio de autenticación

--- a/13-autenticacion-app/src/app/app.component.html
+++ b/13-autenticacion-app/src/app/app.component.html
@@ -1,1 +1,3 @@
-<router-outlet />
+<h1 *ngIf="!comprobacionAutenticacionFinalizada()">Cargando</h1>
+
+<router-outlet *ngIf="comprobacionAutenticacionFinalizada()" />
