--- a/13-autenticacion-app/src/app/panel/layouts/panel-layout/panel-layout.component.html
+++ b/13-autenticacion-app/src/app/panel/layouts/panel-layout/panel-layout.component.html
@@ -3,3 +3,6 @@
 
 <h3>Usuario</h3>
 <pre>{{ usuario() | json }}</pre>
+
+<br>
+<span routerLink="/autenticacion/inicio-sesion">Ir al inicio de sesión</span>
