--- a/13-autenticacion-app/src/app/panel/layouts/panel-layout/panel-layout.component.html
+++ b/13-autenticacion-app/src/app/panel/layouts/panel-layout/panel-layout.component.html
@@ -5,4 +5,6 @@
 <pre>{{ usuario() | json }}</pre>
 
 <br>
-<span routerLink="/autenticacion/inicio-sesion">Ir al inicio de sesión</span>
+<!-- <span routerLink="/autenticacion/inicio-sesion">Ir al inicio de sesión</span> -->
+
+<button (click)="cerrarSesion()">Cerrar sesión</button>
