--- a/14-panel/src/app/panel/panel.component.html
+++ b/14-panel/src/app/panel/panel.component.html
@@ -1,3 +1,12 @@
-<p>panel works!</p>
+<div
+  class="flex bg-slate-100 overflow-y-scroll w-screen h-screen antialiased text-black selection:bg-blue-600 selection:text-white">
+  <div class="flex relative w-screen">
 
-<router-outlet />
+    <menu-lateral />
+
+    <div class="text-black px-2 mt-2 w-full">
+      <router-outlet />
+    </div>
+
+  </div>
+</div>
