--- a/14-panel/src/app/panel/pages/flujo-control/flujo-control.component.html
+++ b/14-panel/src/app/panel/pages/flujo-control/flujo-control.component.html
@@ -1,1 +1,16 @@
-<p>flujo-control works!</p>
+<section class="grid grid-cols-1 md:grid-cols-2 gap-3">
+
+  <div class="bg-white rounded shadow p-10">
+    <h2 class="text-2xl font-bold mb-5">if: {{ mostrarContenido() }}</h2>
+
+    <button class="p-2 bg-blue-500 rounded text-white" (click)="conmutarContenido()">Cliquéame</button>
+
+    @if(mostrarContenido()) {
+    <p>Hola mundo</p>
+    } @else {
+      <p>*********</p>
+    }
+
+  </div>
+
+</section>
