Clase 402. Defer Blocks

--- a/14-panel/src/app/panel/pages/vistas-diferir/vistas-diferir.component.html
+++ b/14-panel/src/app/panel/pages/vistas-diferir/vistas-diferir.component.html
@@ -1,1 +1,21 @@
-<p>vistas-diferir works!</p>
+<section class="grid grid-cols-1">
+
+  @defer () {
+    <cargadores-pesados-lentos claseCss="bg-blue-500" />
+  } @placeholder {
+    <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse">Cargando...</p>
+  }
+
+  @defer () {
+    <cargadores-pesados-lentos claseCss="bg-green-500" />
+  } @placeholder {
+    <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse">Cargando...</p>
+  }
+
+  @defer () {
+    <cargadores-pesados-lentos claseCss="bg-purple-500" />
+  } @placeholder {
+    <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse">Cargando...</p>
+  }
+
+</section>
