Clase 403. Defer Triggers

--- a/14-panel/src/app/panel/pages/vistas-diferir/vistas-diferir.component.html
+++ b/14-panel/src/app/panel/pages/vistas-diferir/vistas-diferir.component.html
@@ -1,3 +1,5 @@
+<titulo titulo="Vistas diferidas" />
+
 <section class="grid grid-cols-1">
 
   @defer () {
@@ -6,13 +8,13 @@
     <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse">Cargando...</p>
   }
 
-  @defer () {
+  @defer (on idle) {
     <cargadores-pesados-lentos claseCss="bg-green-500" />
   } @placeholder {
     <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse">Cargando...</p>
   }
 
-  @defer () {
+  @defer (on viewport) {
     <cargadores-pesados-lentos claseCss="bg-purple-500" />
   } @placeholder {
     <p class="h-[600px] w-full bg-gradient-to-r from-gray-200 to-gray-400 animate-pulse">Cargando...</p>
