Clase 404. Defer Triggers - Interacciones

--- a/14-panel/src/app/panel/pages/opciones-diferir/opciones-diferir.component.html
+++ b/14-panel/src/app/panel/pages/opciones-diferir/opciones-diferir.component.html
@@ -1,1 +1,16 @@
 <titulo titulo="Opciones diferidas" />
+
+<section>
+  <h1 class="text-xl">Interacciones</h1>
+  <hr class="my-y">
+
+  @defer (on interaction) {
+    <cargadores-pesados-rapidos claseCss="bg-blue-500 h-20">
+      <span>En interacción</span>
+    </cargadores-pesados-rapidos>
+  } @placeholder {
+    <div class="w-full h-20 bg-purple-100">
+      Clic en el div
+    </div>
+  }
+</section>
