--- a/14-panel/src/app/panel/pages/input-output/input-output.component.html
+++ b/14-panel/src/app/panel/pages/input-output/input-output.component.html
@@ -2,5 +2,7 @@
 <hr class="my-2" />
 
 <div class="grid grid-cols-1 sm:grid-cols-3 gap-2">
-  <tarjeta-producto />
+  @for (producto of productos(); track producto.id) {
+    <tarjeta-producto />
+  }
 </div>
