Clase 418. Funciones Input y Output

--- a/14-panel/src/app/panel/pages/input-output/input-output.component.html
+++ b/14-panel/src/app/panel/pages/input-output/input-output.component.html
@@ -3,6 +3,6 @@
 
 <div class="grid grid-cols-1 sm:grid-cols-3 gap-2">
   @for (producto of productos(); track producto.id) {
-    <tarjeta-producto />
+    <tarjeta-producto [producto]="producto" (incrementoCantidad)="actualizarProducto(producto, $event)" />
   }
 </div>
