--- a/14-panel/src/app/panel/pages/material/material.component.html
+++ b/14-panel/src/app/panel/pages/material/material.component.html
@@ -4,5 +4,5 @@
 <div class="grid grid-cols-1 sm:grid-cols-3">
   <mat-slide-toggle />
   <mat-icon matBadge="15" aria-hidden="false" matBadgeColor="warn">home</mat-icon>
-  <button mat-raised-button color="primary">Hoja de botones</button>
+  <button (click)="abrirHojaBotones()" mat-raised-button color="primary">Hoja de botones</button>
 </div>
