Clase 434. Mostrar un mensaje de carga

--- a/15-bonus/src/app/mapas/pages/mapa/mapa.component.html
+++ b/15-bonus/src/app/mapas/pages/mapa/mapa.component.html
@@ -1,1 +1,5 @@
-<p>mapa works!</p>
+<carga *ngIf="!localizacionUsuarioLista; else vistaMapa" />
+
+<ng-template #vistaMapa>
+  <vista-mapa />
+</ng-template>
