Clase 447. Obtener la distancia y duración del recorrido

--- a/15-bonus/src/app/mapas/components/resultados-busqueda/resultados-busqueda.component.html
+++ b/15-bonus/src/app/mapas/components/resultados-busqueda/resultados-busqueda.component.html
@@ -10,6 +10,6 @@
 
     <p>{{ lugar.properties.place_formatted }}</p>
 
-    <button class="btn btn-sm" [ngClass]="(lugar.id === idSeleccionado ? 'btn-outline-light' : 'btn-outline-primary')">Direcciones</button>
+    <button class="btn btn-sm" (click)="obtenerDirecciones(lugar)" [ngClass]="(lugar.id === idSeleccionado ? 'btn-outline-light' : 'btn-outline-primary')">Direcciones</button>
   </li>
 </ul>
